Removes sticky-kit Sticky-kit wasn't playing well with bootstrap. I replaced it by using position: fixed combined with scrolling overflow, which doesn't look quite as slick, but should be less prone to odd layout bugs.

--- a/webpage/css/main.css
+++ b/webpage/css/main.css
@@ -10,6 +10,21 @@
 }
 
 /*
+    Navigation
+*/
+#navigation-container {
+    position: relative;
+}
+
+#navigation {
+    background-color: white;
+    z-index: 1;
+    position: fixed;
+    overflow: auto;
+}
+
+
+/*
     Multiple Guide Links
 */
 .docmd-selected-guide {
@@ -19,10 +34,7 @@
 /*
     Table of Contents
 */
-#toc {
-    background-color: white;
-    z-index: 1;
-}
+
 .docmd-toc-list {
     list-style-type: none;
 }
